--- a/admin/package.json
+++ b/admin/package.json
@@ -27,7 +27,8 @@
     "react-hook-form": "^7.56.2",
     "react-paginate": "^8.3.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.5.3"
+    "react-router-dom": "^7.5.3",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
