--- a/backend/package.json
+++ b/backend/package.json
@@ -5,11 +5,10 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server":"nodemon server.js",
-    "admin":"npm run dev --prefix ../admin",
+    "server": "nodemon server.js",
+    "admin": "npm run dev --prefix ../admin",
     "frontend": "npm run dev --prefix ../frontend",
     "dev": "concurrently \"npm run server\" \"npm run admin\" \"npm run frontend\""
-
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +19,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "firebase-admin": "^13.4.0",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "razorpay": "^2.9.6"
   }
 }
